fix: add overflow option to PageLayout content-body

--- a/src/components/PageLayout/PageLayout.css
+++ b/src/components/PageLayout/PageLayout.css
@@ -49,4 +49,5 @@
 .content-body {
   height: 85%;
   padding: 0.75rem;
+  overflow: auto;
 }
